SERVER-26571 ignore 'create' field during collection options parsing

This ensures that we can handle collection metadata created
on version 2.4 or earlier.